Updates checked in another thread